# AAM

./: .env.example  .gitignore  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  REPO_MANIFEST.txt  VALIDATION_REPORT.md  pyproject.toml
.github/workflows/: ci.yml
configs/ablations/: aam_v2_core_matrix.yaml  context_binding_matrix.yaml  core_matrix.yaml  dopamine_gating_matrix.yaml  minimal_confirmatory.yaml  neurogenesis_matrix.yaml  no_text_primary_confirmatory.yaml  overlap_identity_matrix.yaml  prospection_matrix.yaml  replay_poisoning_matrix.yaml
docs/: AAM_V2_EXPERIMENTS.md  AAM_V2_FILE_MAP.md  AAM_V2_IMPLEMENTATION.md  AAM_V2_MATHEMATICS.md  AAM_V2_SPECIFICATION.md  CLOSED_MODELS.md  COMPUTE_PLAN.md  DATASETS.md  EXPERIMENTAL_DESIGN.md  IMPLEMENTATION_STATUS.md  MATHEMATICS.md  MODEL_COMPATIBILITY.md  PRIOR_ART_AND_NOVELTY.md  REPRODUCIBILITY.md  RESULTS_SCHEMA.md  SAFETY_AND_FAILURE_MODES.md  SPECIFICATION.md
infrastructure/: README.md
requirements/: closed.txt  dev.txt  hf.txt  nla.txt  sae.txt
scripts/: checkenvironment.py  checknotextprimary.py  clonethirdparty.py  compareruns.py  composeexperiment.py  downloadnlacheckpoints.py  exportencoderfeatures.py  exporthfactivations.py  launch_nla_sglang.sh  materializeablationmatrix.py  preparedatasets.py  resolveexternalrevisions.py  runcheckpointsuite.py  scorenlapayloads.py  traincodec.py
tests/: testaamv2contextbinding.py  testaamv2dopamineneurogenesis.py  testaamv2episodeidentity.py  testaamv2prospectioninvariant.py  testaamv2reconsolidationreplay.py  testassociations.py  testcapacitybytes.py  testchunkeddataset.py  testcompareruns.py  testcomposeexperiment.py  testconfig.py  testdatasets.py  testexternalbaseline.py  testhashingencoder.py  testmemorymaintenance.py  testnlametadata.py  testpayloads.py  testprecomputed.py  testqwenscopehelpers.py  testreplay.py  testrunner.py  testschema.py  teststore.py
(+136 files in other folders)
