[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "activation-associative-memory"
version = "0.1.0"
description = "Activation-Associative Memory: sparse model-native engrams, Hebbian/temporal plasticity, recurrent retrieval, replay, and rigorous long-memory evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "AAM research scaffold contributors"}]
dependencies = [
  "numpy>=1.26",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.10"]
hf = [
  "torch>=2.3",
  "transformers>=4.48",
  "accelerate>=1.2",
  "datasets>=3.2",
  "huggingface-hub>=0.27",
  "safetensors>=0.4",
]
sae = ["sae-lens>=5.5", "transformer-lens>=2.11"]
embeddings = ["sentence-transformers>=3.3", "faiss-cpu>=1.9"]
closed = ["openai>=1.68", "anthropic>=0.49", "google-genai>=1.5"]
nla = [
  "torch>=2.3", "transformers>=4.48", "safetensors>=0.4",
  "huggingface-hub>=0.27", "httpx>=0.27", "orjson>=3.10", "pyarrow>=17"
]
stats = ["scipy>=1.12", "pandas>=2.2"]
all = [
  "torch>=2.3", "transformers>=4.48", "accelerate>=1.2", "datasets>=3.2",
  "huggingface-hub>=0.27", "safetensors>=0.4", "sae-lens>=5.5",
  "transformer-lens>=2.11", "sentence-transformers>=3.3", "faiss-cpu>=1.9",
  "openai>=1.68", "anthropic>=0.49", "google-genai>=1.5",
  "httpx>=0.27", "orjson>=3.10", "pyarrow>=17",
  "scipy>=1.12", "pandas>=2.2"
]

[project.scripts]
aam = "aamemory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test*.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
